[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    "numpy>=2",
]

[project]
name = "pocky"
dynamic = ["version"]
requires-python = ">=3.10"

[tool.setuptools]
include-package-data = false

[tool.setuptools.dynamic]
version = {attr = "pocky.__version__"}

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]

[tool.setuptools.package-data]
"pocky.ext" = ["include/*.h"]
